app/globals.scss
/* ... */
.bottom-bar-body {
  height: calc(100% - #{$bottom-bar-hover-height});
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  transition: opacity 0.3s , visibility 0.3s ;
  
  .bottom-bar.expanded & {
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
    transition: opacity 0.3s  0.1s, visibility 0.3s  0.1s;
  }
}

.bottom-bar-body-content {
  padding: 0 $overlay-margin $bottom-bar-hover-height $overlay-margin;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.bottom-bar-desktop {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  flex: 1;
  .flex {
    display: inline-flex;
    gap: $bottom-bar-column-gap;
    justify-content: space-between;
  }
  
}

.bottom-bar-mobile {
  display: none;
  flex: 1;
  flex-direction: column;
}

.bottom-bar-section {
  color: $color-text-primary;
  width: 175px;
  
  p {
    font-size: $font-size;
    line-height: 1.2;
    margin-top: 0;
    margin-bottom: 0.5rem;
  }

  a {
    color: $color-text-primary;
    text-decoration: underline;
    transition: opacity 0.3s ;

    &:hover {
      opacity: 0.7;
    }
  }

  &.full-width {
    grid-column: span 4;
    width: 100%;
    margin-top: auto;
    margin-bottom: 0px;
    padding-top: 2rem;
    transform: translateY(100%);
    // padding-bottom: 20px;
    transition: all 0.3s;
    opacity: 0;
    .page:has(.bottom-bar.expanded) & {
      opacity: 1;
      transform: translateY(0);
    }
    
    img {
      width: 100%;
      height: auto;
      image-rendering: crisp-edges;
      image-rendering: -webkit-optimize-contrast;
    }
  }

  &.content {
    width: 265px;
    p {
      margin-bottom: 0.5rem;
    }
  }
  &.links {
    width: inherit;
  }
  &.location {
    width: calc(100%/12 * 2);
  }
}

.bottom-bar-links {
  display: flex;
  flex-direction: column;
  gap: 0.2rem;

  a {
    color: $color-text-primary;
    text-decoration: none !important;
    font-size: $font-size;
    transition: opacity 0.3s ;

    &:hover {
      opacity: 0.7;
    }
  }
}

.bottom-bar-links-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 2rem;
  margin-top: 1rem;

  &-item {
    a {
      color: $color-text-primary;
      font-size: $font-size-mobile;
      transition: opacity 0.3s ;
      text-decoration: none !important;

      &:hover {
        opacity: 0.7;
      }
    }
  }
}

// Mobile Styles
@media (max-width: $mobile-breakpoint) {
  .bottom-bar-section {
    width: 100%;
    p {
      font-size: $font-size-mobile;
      &:last-child {
        margin-bottom: 0;
      }
    }
  }
  .bottom-bar-header {
    padding: 0 $overlay-margin-mobile;
    
      .expanded & {
        display: none;
      }
  }

  .bottom-bar-content {
    grid-template-columns: 3fr 1fr;
    gap: $bottom-bar-hover-height;
  }

  .bottom-bar-section {
    &.content {
      width: 100%;
      max-width: 260px;
      p {
        &:last-child {
          margin-top: 1rem;
        }
      }
    }
    &.info {
      width: 100%;
    }
    &.full-width {
      padding-bottom: 0;
    }
  }

  .desktop-only {
    display: none;
  }

  .bottom-bar-desktop {
    display: none;
  }

  .bottom-bar-mobile {
    display: flex;
    flex-direction: column;
    padding: $bottom-bar-height $overlay-margin-mobile 1rem;
    gap: $bottom-bar-hover-height;
  }

  .bottom-bar-section {
    margin-bottom: 0;
  }

  .bottom-bar-body {
    height: 100%;
  }

  .bottom-bar-body-content {
    padding: 0;
  }

  .bottom-bar-links-grid {
    display: flex;
    gap: 1.5rem;
    margin-top: 0;

    &-item {
      font-size: $font-size-mobile;
    }
  }
}

